Add ship factory and test
- Implement `ship.js` to create a ship object with specified length
- Add `hit(location)` to mark a hit at a given position
- Add `isSunk()` to check if the ship is fully sunk
- Add `isHitAt(location)` to check if a position is hit
- Include tests for ship creation, hit functionality, and sunk status

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Nolan Gajdascz",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "vitest",
     "buildProd": "webpack --config webpack/webpack.prod.js",
