--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
     "html-webpack-plugin": "^5.5.3",
+    "mermaid": "^10.8.0",
     "style-loader": "^3.3.3",
     "vitest": "^1.1.0",
     "webpack": "^5.89.0",
